[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scene/TreeShower.gd" type="Script" id=1]
[ext_resource path="res://Resource/Fonts/ButtonStyle.tres" type="Theme" id=2]
[ext_resource path="res://Scene/Loader.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resource/Fonts/TextFontHeader.tres" type="DynamicFont" id=4]
[ext_resource path="res://Resource/Fonts/TextFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Resource/Fonts/TextFontSubHeader.tres" type="DynamicFont" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.737255, 0.737255, 0.737255, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 0.45098 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.945098, 0.945098, 0.945098, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.431373, 0.431373, 0.431373, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxLine" id=6]
color = Color( 1, 1, 1, 0 )
thickness = 10
vertical = true

[sub_resource type="Theme" id=9]
VScrollBar/styles/grabber = SubResource( 7 )
VScrollBar/styles/grabber_highlight = SubResource( 8 )
VScrollBar/styles/grabber_pressed = SubResource( 5 )
VScrollBar/styles/scroll = SubResource( 6 )

[node name="TreeShower" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
script = ExtResource( 1 )

[node name="MainField" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2

[node name="Background" type="CanvasLayer" parent="MainField"]
layer = -1

[node name="ColorRect" type="ColorRect" parent="MainField/Background"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Diagram" type="Control" parent="MainField"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -457.0
margin_right = 512.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 512, 300 )

[node name="Position2D" type="Position2D" parent="MainField"]
position = Vector2( 412, 125 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true
zoom = Vector2( 2, 2 )

[node name="UX" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UX"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BackBtn" type="Button" parent="UX/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -61.0
margin_right = 75.0
margin_bottom = -31.0
rect_min_size = Vector2( 150, 30 )
theme = ExtResource( 2 )
text = "Выход"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SaveProgressBtn" type="Button" parent="UX/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -195.0
margin_top = -61.0
margin_right = -45.0
margin_bottom = -31.0
rect_min_size = Vector2( 150, 30 )
theme = ExtResource( 2 )
text = "Сохранить"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="UX/Control"]
anchor_left = 0.374023
anchor_top = 0.0416667
anchor_right = 0.625977
anchor_bottom = 0.108333
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="UX/Control"]
anchor_right = 1.0
margin_bottom = 89.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Схема"
align = 1
valign = 1

[node name="NameHeader" type="Label" parent="UX/Control"]
anchor_right = 1.0
margin_top = 49.0
margin_bottom = 89.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Пользователь"
align = 1
valign = 1

[node name="TableBtn" type="Button" parent="UX/Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 41.0
margin_top = -61.0
margin_right = 191.0
margin_bottom = -31.0
rect_min_size = Vector2( 150, 30 )
theme = ExtResource( 2 )
text = "Таблица"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DataPanel" type="Control" parent="UX"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -424.0

[node name="ColorRect" type="ColorRect" parent="UX/DataPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="VSeparator" type="VSeparator" parent="UX/DataPanel"]
anchor_bottom = 1.0
margin_right = 4.0

[node name="VBoxContainer" type="VBoxContainer" parent="UX/DataPanel"]
anchor_right = 1.0
margin_left = 16.0
margin_top = 32.0
margin_right = -16.0
margin_bottom = 515.0

[node name="Header" type="Label" parent="UX/DataPanel/VBoxContainer"]
margin_right = 392.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Заголовок"
autowrap = true
max_lines_visible = 3

[node name="Empty" type="Label" parent="UX/DataPanel/VBoxContainer"]
margin_top = 28.0
margin_right = 392.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
autowrap = true

[node name="Status" type="Label" parent="UX/DataPanel/VBoxContainer"]
margin_top = 50.0
margin_right = 392.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Статус: не изучено"
autowrap = true

[node name="Progress" type="Label" parent="UX/DataPanel/VBoxContainer"]
margin_top = 72.0
margin_right = 392.0
margin_bottom = 90.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Прогресс: 0%"
autowrap = true

[node name="Empty2" type="Label" parent="UX/DataPanel/VBoxContainer"]
margin_top = 94.0
margin_right = 392.0
margin_bottom = 112.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
autowrap = true

[node name="MainText" type="RichTextLabel" parent="UX/DataPanel/VBoxContainer"]
margin_top = 116.0
margin_right = 392.0
margin_bottom = 466.0
rect_min_size = Vector2( 392, 350 )
theme = SubResource( 9 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/mono_font = ExtResource( 5 )
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 5 )
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится А если [url=https://docs.godotengine.org/ru/4.x/classes/class_richtextlabel.html]сюда[/url] вставить нормальный текст, то он становится "
text = "А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится А если сюда вставить нормальный текст, то он становится "

[node name="ColorRect2" type="ColorRect" parent="UX/DataPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 1, 1, 1, 0 )

[node name="StartBtn" type="Button" parent="UX/DataPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 17.0
margin_top = -61.0
margin_right = 167.0
margin_bottom = -31.0
rect_min_size = Vector2( 150, 30 )
theme = ExtResource( 2 )
text = "Изучать"

[node name="FavoriteBtn" type="Button" parent="UX/DataPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -162.0
margin_top = -61.0
margin_right = -12.0
margin_bottom = -31.0
rect_min_size = Vector2( 150, 30 )
theme = ExtResource( 2 )
toggle_mode = true
text = "В избранное"

[node name="ModerBlock" type="Control" parent="UX/DataPanel"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -209.0
margin_top = -85.0
margin_right = 208.0

[node name="ApproveBtn" type="Button" parent="UX/DataPanel/ModerBlock"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 17.0
margin_top = -61.0
margin_right = 167.0
margin_bottom = -31.0
rect_min_size = Vector2( 150, 30 )
theme = ExtResource( 2 )
text = "Подтвердить"

[node name="DeclineBtn" type="Button" parent="UX/DataPanel/ModerBlock"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -162.0
margin_top = -61.0
margin_right = -12.0
margin_bottom = -31.0
rect_min_size = Vector2( 150, 30 )
theme = ExtResource( 2 )
text = "Отклонить"

[node name="Loader" parent="UX" instance=ExtResource( 3 )]
visible = false
color = Color( 1, 1, 1, 0.784314 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="UX/Control/BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="pressed" from="UX/Control/SaveProgressBtn" to="." method="_on_SaveProgressBtn_pressed"]
[connection signal="pressed" from="UX/Control/TableBtn" to="." method="_on_TableBtn_pressed"]
[connection signal="mouse_entered" from="UX/DataPanel" to="." method="stop_move"]
[connection signal="mouse_exited" from="UX/DataPanel" to="." method="start_move"]
[connection signal="meta_clicked" from="UX/DataPanel/VBoxContainer/MainText" to="." method="_on_MainText_meta_clicked"]
[connection signal="mouse_entered" from="UX/DataPanel/StartBtn" to="." method="stop_move"]
[connection signal="mouse_exited" from="UX/DataPanel/StartBtn" to="." method="start_move"]
[connection signal="pressed" from="UX/DataPanel/StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="mouse_entered" from="UX/DataPanel/FavoriteBtn" to="." method="stop_move"]
[connection signal="mouse_exited" from="UX/DataPanel/FavoriteBtn" to="." method="start_move"]
[connection signal="pressed" from="UX/DataPanel/FavoriteBtn" to="." method="_on_FavoriteBtn_pressed"]
[connection signal="mouse_entered" from="UX/DataPanel/ModerBlock/ApproveBtn" to="." method="stop_move"]
[connection signal="mouse_exited" from="UX/DataPanel/ModerBlock/ApproveBtn" to="." method="start_move"]
[connection signal="pressed" from="UX/DataPanel/ModerBlock/ApproveBtn" to="." method="_on_ApproveBtn_pressed"]
[connection signal="mouse_entered" from="UX/DataPanel/ModerBlock/DeclineBtn" to="." method="stop_move"]
[connection signal="mouse_exited" from="UX/DataPanel/ModerBlock/DeclineBtn" to="." method="start_move"]
[connection signal="pressed" from="UX/DataPanel/ModerBlock/DeclineBtn" to="." method="_on_DeclineBtn_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
